# advent-of-code

./: .gitignore  Day1.fs  Day15.fs  Day16.fs  Day17.fs  Day2.fs  Day20.fs  Day22.fs  Day4.fs  Day6.fs  Day8.fs  Day9.fs  LICENCE.md  RunAll.fs  Util.fs  advent-of-code-2020.fsproj
2019/: Cargo.toml
2019/src/: intcode.rs  util.rs
2020/: .gitignore  Day1.fs  Day10.fs  Day11.fs  Day12.fs  Day13.fs  Day14.fs  Day15.fs  Day18.fs  Day19.fs  Day21.fs  Day23.fs  Day24.fs  Day3.fs  Day5.fs  Day7.fs  README.md  RunAll.fs  Util.fs  advent-of-code-2020.fsproj  day25.fs
2021/: .env  Cargo.toml  README.md  staging.fish
2021/input/: day23.txt
2021/src/: util.rs
2022/: .env  Cargo.toml
2022/src/: util.rs
2023/: .env  Cargo.toml  staging.fish
2024/: .gitignore  Cargo.toml
2024/src/: util.rs
