[package]
name = "advent_of_code_2023"
version = "0.1.0"
edition = "2021"

[lib]
name = "util"
path = "src/util.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
contain = "0.4"
derive_more = "0.99.17"
itertools = "0.12.0"
rayon = "1.8.0"
regex = "1.10.2"
smallvec = { version = "1.11.2", features = [
    "union",
    "const_generics",
    "const_new",
] }
indexmap = "2.1.0"
priority-queue = "1.3.2"
